Fri Jul  3 18:14:21 1998  Lennart Staflin  <lenst@lysator.liu.se>

	* Version 1.1.3

	* Makefile.in: Call install with only one source file.
	
Fri Jul  3 17:54:06 1998  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-edit.el (sgml-complete): ignore case

	* psgml-parse.el (sgml-push-to-entity): use setf to set 
	sgml-entity-marked-undefined-p.
	(setf sgml-entity-marked-undefined-p): define setf method
	
Tue Jun 30 22:06:20 1998  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-edit.el (sgml-do-set-option): Added file-list and
	file-or-nil types contributed by Matthias Clasen
	<mclasen@sun2.mathematik.uni-freiburg.de>
	
Tue Jun 30 21:48:39 1998  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml.el (sgml-mode-map): C-c C-i calls sgml-add-element-to-element

	* psgml-edit.el (sgml-add-element-to-element): New command.
	
Wed Jun 24 23:23:38 1998  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-edit.el (sgml-attribute-buffer): Fixed another victim of
	the case change.
	(sgml-change-element-name): fix bug with empty XML element

Mon Jun 22 19:58:43 1998  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml.el (psgml-version): Version 1.1.2

	* Installed patch from Matthias Clasen
	<clasen@pong.mathematik.uni-freiburg.de>.
	Adding notation to entities and a sgml-notation-handlers variable
	used by sgml-edit-external-entity.

	* psgml-edit.el (sgml-indent-line): Previous change of
	sgml-indent-line did not work well with OMITTAG. Restore old
	functionallity.
	
Fri Jun 19 18:54:27 1998  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-edit.el (sgml-attribute-buffer): 
	changed case of default value type, here and in many other functions.
	(sgml-translate-attribute-specification-list): changed case for
	declared value

	* psgml-parse.el (sgml-parse-attribute-specification-list):
	changed case of default value type

1998-06-16  Dave Love  <d.love@dl.ac.uk>

	* psgml-edit.el (sgml-read-element-name,
	sgml-read-attribute-value, sgml-insert-attribute,