@@ -1,3 +1,7 @@
+Sat Aug 15 18:58:25 1998  Lennart Staflin  <lenst@lysator.liu.se>
+
+	* psgml-edit.el (sgml-complete): add completion of #-reserved words
+
 Fri Jul  3 18:14:21 1998  Lennart Staflin  <lenst@lysator.liu.se>
 
 	* Version 1.1.3
